tests/reference/asr-ichar_arg_len_compiletime-55503f1.stderr
semantic error: Unexpected args, Ichar expects (char of length 1) as arguments
 --> tests/errors/ichar_arg_len_compiletime.f90:2:13
  |
2 |    print *, ichar("Hello")
  |             ^^^^^^^^^^^^^^ 
